--- a/inkey_ui/pubspec.yaml
+++ b/inkey_ui/pubspec.yaml
@@ -9,11 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  inkey_flutter_v1:
+    path: "package/inkey_flutter_v1"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+
 
 flutter:
   uses-material-design: true
